2004-04-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/autoplug/gstspider.c: (gst_spider_link_sometimes),
	(gst_spider_identity_plug):
	  improve debugging messages
	* gst/gstbin.c: (gst_bin_remove_func):
	  make sure the state_change function is only called with simple state
	  transitions

2004-04-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstfakesink.c: (gst_fakesink_state_error_get_type),
	(gst_fakesink_set_property), (gst_fakesink_chain):
	* gst/elements/gstfakesrc.c: (gst_fakesrc_set_property):
	* gst/elements/gstfdsrc.c: (gst_fdsrc_set_property):
	* gst/elements/gstfilesrc.c: (gst_filesrc_set_property):
	* gst/elements/gstidentity.c: (gst_identity_chain),
	(gst_identity_set_property):
	* gst/elements/gstmultifilesrc.c: (gst_multifilesrc_set_property):
	* gst/elements/gstpipefilter.c: (gst_pipefilter_set_property):
          add warnings to _set_property for unknown arguments
          use GST_TIME_FORMAT/GST_TIME_ARGS for timestamp printing

2004-04-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* docs/manuals.mak:
          add .po file download snippet
          fix a bug in the doc makefile

2004-04-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* po/LINGUAS:
	* po/en_GB.po:
          Added en_GB translation (Gareth Owen)

2004-04-20  Johan Dahlin  <johan@gnome.org>

	* gst/gstpad.c (_invent_event): Clean up

2004-04-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* testsuite/caps/filtercaps.c: (main):
	  fix test to test things correctly (caps are complicated)

2004-04-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* testsuite/caps/Makefile.am:
	* testsuite/caps/filtercaps.c: (main):
	  add test (that doesn't work right now, but should)

2004-04-19  David Schleef  <ds@schleef.org>

	* configure.ac: Add test for allowing unaligned access.  Add define
	to put in gstconfig.h.
	* docs/gst/gstreamer-sections.txt: New symbols